@@ -4,11 +4,18 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import pl.kurs.exceptions.CarNotFoundException;
 import pl.kurs.model.Car;
 import pl.kurs.model.command.CreateCarCommand;
 import pl.kurs.model.dto.CarDto;
 import pl.kurs.repository.CarRepository;
+
+import java.lang.reflect.Array;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.*;
@@ -38,10 +45,12 @@ public class CarServiceTest {
 
     @Test
     public void shouldReturnAllCars() {
-        when(carRepository.findAll()).thenReturn(List.of(car1, car2));
-        List<CarDto> cars = carService.findAllCars();
-        assertEquals(2, cars.size());
-        verify(carRepository, times(1)).findAll();
+        Pageable pageable = PageRequest.of(0,2);
+        Page<Car> page = new PageImpl<>(Arrays.asList(car1,car2),pageable,2);
+        when(carRepository.findAll(pageable)).thenReturn(page);
+        Page<Car> cars = carService.findAllCars(pageable);
+        assertEquals(2, cars.getTotalElements());
+        verify(carRepository, times(1)).findAll(pageable);
     }
 
     @Test
@@ -49,16 +58,16 @@ public class CarServiceTest {
         CreateCarCommand command = new CreateCarCommand("Audi", "RS5", "petrol");
         Car car = new Car(command.getBrand(), command.getModel(), command.getFuelType());
         when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car);
-        CarDto carDto = carService.addCar(command);
-        assertEquals("Audi", carDto.brand());
+        Car result = carService.addCar(command);
+        assertEquals("Audi", result.getBrand());
         verify(carRepository, times(1)).saveAndFlush(any(Car.class));
     }
 
     @Test
     public void shouldFindCarById() {
         when(carRepository.findById(anyInt())).thenReturn(Optional.of(car1));
-        CarDto carDto = carService.findCarById(1);
-        assertEquals("Audi", carDto.brand());
+        Car result = carService.findCarById(1);
+        assertEquals("Audi", result.getBrand());
         verify(carRepository, times(1)).findById(anyInt());
     }
 
@@ -85,10 +94,10 @@ public class CarServiceTest {
         CreateCarCommand command = new CreateCarCommand("BMW", "M6", "petrol");
         when(carRepository.findById(anyInt())).thenReturn(Optional.of(car1));
         when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car1);
-        CarDto carDto = carService.editCar(1, command);
-        assertNotNull(carDto);
-        assertEquals("BMW", carDto.brand());
-        assertEquals("M6", carDto.model());
+        Car result = carService.editCar(1, command);
+        assertNotNull(result);
+        assertEquals("BMW", result.getBrand());
+        assertEquals("M6", result.getModel());
         verify(carRepository, times(1)).findById(anyInt());
         verify(carRepository, times(1)).saveAndFlush(any(Car.class));
     }
@@ -99,9 +108,9 @@ public class CarServiceTest {
         CreateCarCommand command = new CreateCarCommand(null, "M6", null);
         when(carRepository.findById(anyInt())).thenReturn(Optional.of(car));
         when(carRepository.saveAndFlush(any(Car.class))).thenReturn(car);
-        CarDto carDto = carService.editCarPartially(1, command);
-        assertEquals("Mercedes", carDto.brand());
-        assertEquals("M6", carDto.model());
+        Car result = carService.editCarPartially(1, command);
+        assertEquals("Mercedes", result.getBrand());
+        assertEquals("M6", result.getModel());
         verify(carRepository, times(1)).findById(anyInt());
         verify(carRepository, times(1)).saveAndFlush(any(Car.class));
     }
